<resources>
    <string name="app_name">Vaquita</string>
    <string name="tituloApp">Hagamos vaca</string>
    <string name="hintEmailLogin">Correo Electrónico</string>
    <string name="hintEmailRecuperar">Correo Electrónico</string>
    <string name="hintClave">Contraseña</string>
    <string name="textOlvideClave">Olvidé mi contraseña</string>
    <string name="textLogin">Entrar</string>
    <string name="textRecuperar">Recuperar Contraseña</string>
    <string name="hintRecuperar">Olvidé mi Contraseña</string>
    <string name="textRegistrarse">Registrarse</string>
    <string name="hintNombre">Nombre</string>
    <string name="hintMail">Correo electrónico</string>
    <string name="hintTelefono">Teléfono</string>
    <string name="hintClaveRepeticion">Repita su contraseña</string>
    <string name="hintNombreDeUsuario">Nombre de Usuario</string>
    <string name="exitoRegistro">Registro Existoso!</string>
    <string name="ok">Ok</string>
    <string name="textBienvenida">Bienvenido!</string>
    <string name="logout">Salir</string>
    <string name="preguntaLogout">¿Desea Salir?</string>
    <string name="cancelar">Cancelar</string>
    <string name="loremIpsum">Lorem ipsum es el texto que se usa habitualmente en diseño gráfico en demostraciones de tipografías o de borradores de diseño para probar el diseño visual antes de insertar el texto final.</string>
    <string name="tituloNuevaWallet">Nueva Wallet</string>
    <string name="hintNombreDeWallet">Nombre de Wallet</string>
    <string name="hintFecha">Fecha</string>
    <string name="hintLugar">Lugar</string>
    <string name="textContinuar">Continuar</string>
    <string name="hintBuscar">Buscar Amigos</string>
    <string name="seccionAmigos">Amigos</string>
    <string name="seccionInvitar">Invitar Amigos</string>
    <string name="guardar">Guardar</string>
    <string name="exitoWallet">Wallet Creada con Éxito</string>
    <string name="title_activity_actividad_tarjeta_de_credito">ActividadTarjetaDeCredito</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="free">GRATIS</string>
    <string name="display_name">Display Name</string>
    <string name="signout">Cerrar Sesión</string>
    <string name="subscriptions">Suscripción</string>
    <string name="free_plan">Plan GRATIS</string>
    <string name="see_pro">Mira los beneficios de PRO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="edit">Edit</string>
    <string name="change">Change</string>
    <string name="upgrade">Mejora con Pro</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_pay">Pay</string>
    <string name="title_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textParticipantes">Participantes</string>
    <string name="textGastos">Gastos</string>
    <string name="pagar">Pagar</string>
    <string name="paypal">PayPal</string>
    <string name="tarjeta">Tarjeta de Crédito</string>
    <string name="efectivo">Efectivo</string>
    <string name="textSeleccioneMetodo">Seleccione un método de pago</string>
    <string name="Visa">Visa</string>
    <string name="cantidadAPagar">Cantidad a pagar:</string>
    <string name="textNombreDeTarjeta">Nombre de la tarjeta</string>
    <string name="hintNombreDeTarjeta">Nombre en la Tarjeta</string>
    <string name="hintNumeroDeTarjeta">Número de la tarjeta</string>
    <string name="hintFechaTarjeta">Fecha en la Tarjeta</string>
    <string name="hintCCV">CCV</string>
    <string name="hintPostal">Número Postal</string>
    <string name="comic">Gran Premier de Comic</string>
    <string name="date">21/12/2021</string>
    <string name="price">$ 15.99</string>
    <string name="compra">El Origen</string>
    <string name="titulo">Titulo</string>
    <string name="valor">Valor</string>
    <string name="descripcion">Descripcion</string>
    <string name="agregar">Agregar</string>
    <string name="title_activity_actividad_recuperar">ActividadRecuperar</string>
    <string name="tituloRegistro">Regístrate</string>
    <integer name="numeroMinimoDeCaracteresEnClave">8</integer>
    <string name="bienvenido">Bienvenido</string>
    <string name="nuevoGasto">Nuevo Gasto</string>
    <string name="valorPagoTarjeta">Valor del Pago:</string>
    <string name="valorPagoPagar">$ 69420.99</string>
    <string name="tituloPagoEfectivo">Pago en Efectivo</string>
    <string name="valorPagoEfectivo">Ingresa el valor que deseas pagar:</string>
    <string name="tituloPagoTarjeta">Pago con Tarjeta de Crédito</string>
    <string name="valorWallet">Total Gastos:</string>
    <string name="tituloWallets">Wallets</string>
    <string name="tituloMyWallets">Wallets Recientes</string>
    <string name="dolarSign">$</string>
    <string name="valorPagos">Total Pagos:</string>
    <string name="recordarme">Recordarme</string>
    <string name="pagospendientes">Pagos Pendientes</string>
    <string name="cantidad">$ 69 420.99</string>
    <string name="pagos">Wallets a Pagar:</string>
    <string name="pagoUserDefault">0.0</string>
    <string name="nombrevalido">Nombre válido</string>
    <string name="nombreInvalido">Nombre inválido</string>
    <string name="fechaInvalida">Fecha inválida</string>
    <string name="fechaValida">Fecha válida</string>
    <string name="lugarInvalida">Lugar inválido</string>
    <string name="lugarValida">Lugar válido</string>
    <string name="espere">Espere un momento</string>
    <string name="registrofallido">Registro fallido</string>
    <string name="mailinvalido">Mail inválido</string>
    <string name="mailvalido">Mail válido</string>
    <string name="error">Error</string>



    <!--Colecciones-->
    <string name="wallets">Wallets</string>
    <string name="usuarios">Usuarios</string>
    <string name="pagoss">Pagos</string>
    <string name="gastos">Gastos</string>
    <string name="aceptar">Aceptar</string>
</resources>