<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActividadLogin">

    <ImageView
        android:id="@+id/imageVacaLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="75dp"
        app:layout_constraintBottom_toTopOf="@id/textTitulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vacalogo" />

    <TextView
        android:id="@+id/textTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/tituloApp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/textUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageVacaLogo" />

    <EditText
        android:id="@+id/textUsuario"
        android:layout_width="271dp"
        android:layout_height="53dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/hintUsuario"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@id/textClave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitulo" />

    <EditText
        android:id="@+id/textClave"
        android:layout_width="271dp"
        android:layout_height="53dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/hintClave"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/textOlvideClave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUsuario" />

    <TextView
        android:id="@+id/textOlvideClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/textOlvideClave"
        app:layout_constraintBottom_toTopOf="@id/botonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textClave" />

    <Button
        android:id="@+id/botonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/textLogin"
        android:background="@color/black"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/botonRegistro"
        app:layout_constraintTop_toBottomOf="@+id/textOlvideClave" />

    <Button
        android:id="@+id/botonRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="75dp"
        android:background="@color/gris"
        android:textColor="@color/white"
        android:text="@string/textRegistrarse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>